--- a/templates/home.html
+++ b/templates/home.html
@@ -53,11 +53,14 @@
         </div>
         <div class="middle-text">
             <p class="text-content">
-                WHO AM I
+                My name is Rowan Lavelle, I am currently a Masters student at Indiana University studying Computer Science with a focus is artificial intelligence and machine learning. I also completed my undergraduate degree here at IU, I majored in computer science with minors in mathematics and statistics. <br> <br>
+                My current curiosities lie in natural language processing (NLP), stochastic processes, and Bayesian methods. I am very curious about the intersection between artificial intelligence and finance. Especially the combination of bayesian statistics, knowledge based NLP, and stochastic processes for the modeling of financial markets. <br> <br>
+                Outside of these interests, my curiosity is also peaked by space exploration and astronomy. One of my current fascinations is <a target="_blank" href="https://en.wikipedia.org/wiki/Kessler_syndrome">Kessler Syndrome</a>. I think the application of autonomous vehicles for the cleaning up of lower orbit is a must for our current situation.
             </p>
 
             <p class="text-content">
-                WHERE DO I WORK
+                As of right now I am a teachers assistant for an undergrad introduction to AI course. We cover the basics of logic, probability, search algorithms, heuristics, games, knowledge representation, and machine learning. It has been a very interesting course to teach, and I have learned a lot about explaining high level concepts to people with no background in the subject. <br> <br>
+                Along with this I am a computational biophysics researcher under the head of the IU physics department. Although the project is currently on hold due to funding, it has been an incredibly motivating project to work on. Coming into the project I had no knowledge of biology, differential equations, or stochastic simulations. Over the course of the project I have been able to interact with, and learn the basics of these things in a hands on manner. <br> <br> Going forward from here I hope that we are able to continue the project, the research is very stimulating, and will have a large impact on the understanding of the meiotic termination network. We are attempting to model the counts of different proteins as the cell goes through its phases, so that we can quantitatively determine when a cell has entered the exit phase of its life. The project can be found <a href="{{ url_for('projects') }}">here</a> in the projects tab! 
             </p>
 
 
