updated terminal sim

--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="message">
                         <span class='prompt'><span class='user'>rowlavel</span><span class="at">@</span><span
-                                class="path">jupiter.io ~/Documents </span><span class="caret">$</span>
+                                class="path">jupiter.io /home </span><span class="caret">$</span>
                         <span class="typed"></span>
                         <form>><span class="caret">$</span>&nbsp;<input type="text" name="response"/></form>
                     </div>
