--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,7 @@
         <div class="middle-text">
             <p class="text-content">
                 My name is Rowan Lavelle, I am currently a Masters student at Indiana University studying Computer Science with a focus is artificial intelligence and machine learning. I also completed my undergraduate degree here at IU, I majored in computer science with minors in mathematics and statistics. <br> <br>
-                My current curiosities lie in natural language processing (NLP), stochastic processes, and Bayesian methods. I am very curious about the intersection between artificial intelligence and finance. Especially the combination of bayesian statistics and knowledge based NLP for the modeling of financial markets. <br> <br>
+                My current curiosities lie in natural language processing (NLP), stochastic processes, and Bayesian methods. I am also becoming very curious about the intersection between knowledge based AI and bayesian methods with respect to financial market modeling. <br> <br>
                 Outside of these interests, my curiosity is also peaked by space exploration and astronomy. One of my current fascinations is <a target="_blank" href="https://en.wikipedia.org/wiki/Kessler_syndrome">Kessler Syndrome</a>. I think the application of autonomous vehicles for the cleaning up of lower orbit is a must for our current situation.
             </p>
 
