--- a/templates/home.html
+++ b/templates/home.html
@@ -53,24 +53,20 @@
         </div>
         <div class="middle-text">
             <p class="text-content">
-                My name is Rowan Lavelle, I am currently a Masters student at Indiana University studying Computer Science with a focus is artificial intelligence and machine learning. I also completed my undergraduate degree here at IU, I majored in computer science with minors in mathematics and statistics. <br> <br>
-                My current curiosities lie in natural language processing (NLP), stochastic processes, and Bayesian methods. <br> <br>
-                Outside of these interests, my curiosity is also peaked by space exploration and astronomy. One of my current fascinations is <a target="_blank" href="https://en.wikipedia.org/wiki/Kessler_syndrome">Kessler Syndrome</a>. I think the application of autonomous vehicles for the cleaning up of lower orbit is a must for our current situation.
+                My name is Rowan Lavelle, I am currently a Masters student at Indiana University Bloomington studying Computer Science with a focus in artificial intelligence and machine learning. I also completed my undergraduate degree here majoring in CS with minors in mathematics and statistics. <br> <br>
+                My current curiosities lie in natural language processing (NLP), probabilistic models, and Bayesian statistics. <br> <br>
+                Outside of these interests, my curiosity is also peaked by space exploration and astronomy. One of my current fascinations is <a target="_blank" href="https://en.wikipedia.org/wiki/Kessler_syndrome">Kessler Syndrome</a>. I think the application of autonomous vehicles for lower orbit cleanup is a vital part of humanities continued exploration of space. <br> <br>
+                As of recently I have also taken interest in computational economics and computational finance which has motivated a stock forecasting project which I am currently working on.
             </p>
 
             <p class="text-content">
-                As of right now I am a teachers assistant for an undergrad introduction to AI course. We cover the basics of logic, probability, search algorithms, heuristics, games, knowledge representation, and machine learning. It has been a very interesting course to teach, and I have learned a lot about explaining high level concepts to people with no background in the subject. <br> <br>
-                Along with this I am a computational biophysics researcher under the head of the IU physics department. Although the project is currently on hold due to funding, it has been an incredibly motivating project to work on. Coming into the project I had no knowledge of biology, differential equations, or stochastic simulations. Over the course of the project I have been able to interact, and learn the basics of these things in a hands on manner. <br> <br> Going forward from here I hope that we are able to continue the project, the research is very stimulating, and will have a large impact on the understanding of the meiotic termination network. We are attempting to model the counts of different proteins as the cell goes through its phases, so that we can quantitatively determine when a cell has entered the exit phase of its life. The project can be found <a href="{{ url_for('projects') }}">here</a> in the projects tab! 
+                I am a teachers assistant for an undergrad introduction to AI course. We cover the basics of logic, probability, search algorithms, heuristics, games, knowledge representation, and machine learning.  <br> <br>
             </p>
 
 
             <p class="text-content">You can find me on <a href="http://in.linkedin.com/in/rowan-lavelle/">LinkedIn</a>,
                 or email me <a href="mailto:rowan.lavelle@gmail.com?Subject=Hello%20Rowan%20-from-website" target="_top">here</a>.
             </p>
-
-            <p class="text-content">Let's get in touch if you like what you see!</p>
-
-            <p class="text-content">Rowan Lavelle</p>
 
             <br>
         </div>
