added stock project

--- a/templates/project.html
+++ b/templates/project.html
@@ -14,7 +14,7 @@
         {% if 'photos' in project or 'videos' in project %}
         <div>
             <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false" ;>
-                <!-- Indicators -->
+                <!-- Indicators
                 <ol class="carousel-indicators">
                     {% for video in project['videos'] %}
                     <li data-target="#myCarousel" data-slide-to="loop.index0"
@@ -24,7 +24,7 @@
                     <li data-target="#myCarousel" data-slide-to="loop.index0"
                         class="{{'active' if ((loop.index0 == 0) and (not 'videos' in project)) }}"></li>
                     {% endfor %}
-                </ol>
+                </ol> -->
 
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
