--- a/templates/home.html
+++ b/templates/home.html
@@ -60,7 +60,7 @@
             </p>
 
             <p class="text-content">
-                I am a teachers assistant for an undergrad introduction to AI course. We cover the basics of logic, probability, search algorithms, heuristics, games, knowledge representation, and machine learning.  <br> <br>
+                I am also a teachers assistant for an undergrad introduction to AI course. We cover the basics of logic, probability, search algorithms, heuristics, games, knowledge representation, and machine learning.  <br> <br>
             </p>
 
 
