removed readmore link

--- a/templates/card.html
+++ b/templates/card.html
@@ -24,15 +24,8 @@
                 <i class="material-icons right activator">more_vert</i>
             </div>
             <div>
-                <span><a href="/projects/{{project['link']}}">Read More</a></span>
                 {% if 'github' in project %}
-                <span><a class="github" href={{project['github']}}> | Github</a></span>
-                {% endif %}
-                {% if 'arxiv' in project %}
-                <span><a class="github" href={{project['arxiv']}}> | Arxiv</a></span>
-                {% endif %}
-                {% if 'playstore' in project %}
-                <!--<span><a class="github" href={{project['playstore']}}> | Play Store</a></span>-->
+                <span><a class="github" href={{project['github']}}>Github</a></span>
                 {% endif %}
             </div>
         </div>
@@ -41,7 +34,6 @@
                     class="material-icons right">close</i></span>
             <div><span class="status">{{project['date']}}</span></div>
             <p>{{project['short']}}</p>
-            <span><a href="/projects/{{project['link']}}">Read More</a></span>
         </div>
     </div>
 </div>
