--- a/templates/home.html
+++ b/templates/home.html
@@ -55,7 +55,7 @@
             <p class="text-content">
                 My name is Rowan Lavelle, I am currently a Masters student at Indiana University Bloomington studying Computer Science with a focus in artificial intelligence and machine learning. I also completed my undergraduate degree here majoring in CS with minors in mathematics and statistics. <br> <br>
                 My current curiosities lie in natural language processing (NLP), probabilistic models, and Bayesian statistics. <br> <br>
-                Outside of these interests, my curiosity is also peaked by space exploration and astronomy. One of my current fascinations is <a target="_blank" href="https://en.wikipedia.org/wiki/Kessler_syndrome">Kessler Syndrome</a>. I think the application of autonomous vehicles for lower orbit cleanup is a vital part of humanities continued exploration of space. <br> <br>
+                Outside of these interests, my curiosity is also piqued by space exploration and astronomy. One of my current fascinations is <a target="_blank" href="https://en.wikipedia.org/wiki/Kessler_syndrome">Kessler Syndrome</a>. I think the application of autonomous vehicles for lower orbit cleanup is a vital part of humanities continued exploration of space. <br> <br>
             </p>
 
             <p class="text-content">
