--- a/templates/home.html
+++ b/templates/home.html
@@ -53,15 +53,12 @@
         </div>
         <div class="middle-text">
             <p class="text-content">
-                My name is Rowan Lavelle, I am currently a Masters student at Indiana University Bloomington studying Computer Science with a focus in artificial intelligence and machine learning. I also completed my undergraduate degree here majoring in CS with minors in mathematics and statistics. <br> <br>
-                My current curiosities lie in natural language processing (NLP), probabilistic models, and Bayesian statistics. <br> <br>
+                My name is Rowan Lavelle, I am currently Quantitative Analyst at J.P. Morgan working on the securitized products team within the model risk governance and review department. <br> <br>
+                I completed my masters degree from Indiana University Bloomington in Computer Science with a focus in artificial intelligence and machine learning. I also completed my undergraduate degree there majoring in Computer Science with minors in Mathematics and Statistics. <br> <br>
+                During undergrad and grad school I was a teachers assistant for an introduction for artificial intelligence class. <br> <br>
+                My current curiosities lie in quantitative finance, natural language processing (NLP), probabilistic models, and Bayesian statistics. <br> <br>
                 Outside of these interests, my curiosity is also piqued by space exploration and astronomy. One of my current fascinations is <a target="_blank" href="https://en.wikipedia.org/wiki/Kessler_syndrome">Kessler Syndrome</a>. I think the application of autonomous vehicles for lower orbit cleanup is a vital part of humanities continued exploration of space. <br> <br>
             </p>
-
-            <p class="text-content">
-                I am also a teachers assistant for an undergrad introduction to AI course. We cover the basics of logic, probability, search algorithms, heuristics, games, knowledge representation, and machine learning.  <br> <br>
-            </p>
-
 
             <p class="text-content">You can find me on <a href="http://in.linkedin.com/in/rowan-lavelle/">LinkedIn</a>,
                 or email me <a href="mailto:rowan.lavelle@gmail.com?Subject=Hello%20Rowan%20-from-website" target="_top">here</a>.
