--- a/templates/card.html
+++ b/templates/card.html
@@ -27,6 +27,9 @@
                 {% if 'github' in project %}
                 <span><a class="github" href={{project['github']}}>Github</a></span>
                 {% endif %}
+                {% if 'paper' in project %}
+                <span><a class="github" href={{project['paper']}}>Paper</a></span>
+                {% endif %}
             </div>
         </div>
         <div class="card-reveal">
