--- a/templates/card.html
+++ b/templates/card.html
@@ -28,7 +28,7 @@
                 <span><a class="github" href={{project['github']}}>Github</a></span>
                 {% endif %}
                 {% if 'paper' in project %}
-                <span><a class="github" href={{project['paper']}}>Paper</a></span>
+                <span> |  <a class="github" href={{project['paper']}}>Paper</a></span>
                 {% endif %}
             </div>
         </div>
