--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     <ul id="navbar-list" class="list-inline">
         <li><a class="navbar-ref" href="/">Home</a></li>
         <li><a class="navbar-ref" href="/projects">Projects</a></li>
-        <l1><a class="navbar-ref" href="/resume">Resume</a></l1>
+        <!-- <l1><a class="navbar-ref" href="/resume">Resume</a></l1> -->
     </ul>
 </div>
 {% block body %}
